# ParMETIS

./: CMakeLists.txt
libparmetis/: CMakeLists.txt  ParMETISConfig.cmake.in
programs/: CMakeLists.txt
